[package]
name = "docbrown-db"
description = "Database package for DocBrown, a temporal graph library"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docbrown-core = {path = "../core", version = "0.0.2" }
parking_lot = { version = "0.12" , features = ["serde"] }
flume = "0.10"
futures = {version = "0.3", features = ["thread-pool"] }
replace_with = "0.1"
itertools="0.10"
csv = "1.1.6"
flate2 = "1.0"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
rayon = "1"
chrono = "0.4"
bincode = "1"
# mimalloc = "0.1"
# mimalloc = { version = "0.1", default-features = false }
rand = "0.8.5"
tempdir = "0.3"
uuid = { version = "1.3.0", features = ["v4"] }
reqwest = { version = "0.11.14", features = ["blocking"] }
rand_distr = "0.4.3"
[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
criterion = "0.3"

[[bench]]
name = "base"
harness = false

[[bench]]
name = "parameterized"
harness = false
