[package]
name = "examples-btc"
version.workspace = true
edition = "2021"
keywords = ["graph", "temporal-graph", "temporal", "btc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docbrown-core = {path = "../../docbrown/core"}
docbrown-db = {path = "../../docbrown/db"}
parking_lot = { version = "0.12" , features = ["serde"] }
flume = "0.10"
futures = {version = "0.3", features = ["thread-pool"] }
replace_with = "0.1"
itertools="0.10"
csv = "1.1.6"
flate2 = "1.0"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
rayon = "1"
chrono = "0.4"
bincode = "1"
# mimalloc = "0.1"
# mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
